\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 1.17.9}{
\itemize{
   \item{Fix bug in retrieving SummarizedExperiment}
 }
}

\section{Version 1.17.8}{
\itemize{
   \item{Fix bug when no peaks}
 }
}

\section{Version 1.17.5}{
\itemize{
   \item{Update: major overhaul of internals to minimize memory consumption}
   \item{Update: upgrade peaksort to use inplace peakOrder}
   \item{Update: optimize peak merging memory usage}
   \item{Update: remove $allvectors and $vectors; 
replace with $merged (without score matrix) and $binding}
   \item{Update: designate DESeq method as obsolete (in favor of DESeq2); 
alter documentaiton and vignette accordingly.}
   \item{Update: change PCA method from princomp() to prcomp()}
   \item{Update: change bCorPlot default to FALSE (no more automatic clustering heatmaps)}
   }
}

\section{Version 1.17.4}{
\itemize{
   \item{Bug fix: ensure loading sample sheet doesn't treat hash as comment char.}
   }
}

\section{Version 1.17.3}{
\itemize{
   \item{Bug fix: tildes in file paths now accepted.}
   \item{Bug fix: spaces trimmed from entries in sample sheets (with warning).}
   \item{Feature: maxGap implemented in merge.}
   \item{Bug fix: functions added to importFrom stats to satisfy BiocCheck.}
   }
}

\section{Version 1.17.2}{
\itemize{
   \item{Added a space-efficient merge, with "mergePeaks" and "mergeScores" functions.}
   }
}

\section{Version 1.17.1}{
\itemize{
   \item{Include a C++ peakOrder function for ordering peaks quickly without using much space.}
   \item{Include the beginnings of some unit tests using the testthat package.}
   }
}

\section{Version 1.16.0}{
\itemize{
   \item{Roll up bugfixes}
   \item{dba.plotHeatmap returns binding sites in row order}
   }
}


\section{Version 1.14.0}{
\itemize{
   \item{Add support for reading Excel-format sample sheets (.xls, .xlsx extensions}
   \item{Update DESeq2 reference in vignette; fix vignette samplesheet}
   \item{use vennPlot from systemPiper}