@@ -1,6 +1,6 @@
 Package: DiffBind
 Type: Package
-Version: 1.17.13
+Version: 1.17.14
 Title: Differential Binding Analysis of ChIP-Seq peak data
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gord Brown
         <gdbzork@gmail.com>
